# LAB3

./: .gitignore  CMakeLists.txt
docs/: Report.docx
include/: CMakeLists.txt  tarithmeticexpression.h  test_stack_simple.cpp  tstack.h
samples/: CMakeLists.txt  sample_calc.cpp
src/: CMakeLists.txt  tarithmeticexpression.cpp
test/: CMakeLists.txt  test_main.cpp  test_tarithmeticexpression.cpp
